Fixed form input spacing, toggled saved routes list

--- a/static/css/map_base.css
+++ b/static/css/map_base.css
@@ -37,6 +37,11 @@ ul {
     padding-inline-start: 0px;
 }
 
+.form-control{
+	display: inline-block;
+	width: 30em;
+}
+
 img.adp-marker2{
 	display:none;
 }
